After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 548438 - Fields are not being updated when deleting a character
Fields are not being updated when deleting a character
Status: RESOLVED FIXED
Product: ghex
Classification: Applications
Component: general
2.21.x
Other All
: Normal normal
: ---
Assigned To: GHex maintainers
GHex maintainers
Depends on:
Blocks:
 
 
Reported: 2008-08-19 12:31 UTC by xenoborg
Modified: 2011-08-03 07:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch for described bug (341 bytes, patch)
2008-08-19 12:54 UTC, xenoborg
committed Details | Review

Description xenoborg 2008-08-19 12:31:19 UTC
Please describe the problem:
If you delete a character in ghex using the 'del' key, the cursor automatically jumps to the next one. However, the fields (Hexadecimal, Octal, Binary, Signed 8 Bit, ...) still give you your old character. 

Steps to reproduce:
1. Open a file
2. Select a character which you want to delete
3. Press 'del' on your keyboard


Actual results:
The fields (Hexadecimal, Octal, Binary, Signed 8 Bit, ...) still show the character that you just deleted

Expected results:
The fields should show the new character which is selected after deleting the old one.

Does this happen every time?
yup

Other information:
Comment 1 xenoborg 2008-08-19 12:54:18 UTC
Created attachment 116956 [details] [review]
patch for described bug

created for version 2.21.92
Comment 2 Kalev Lember 2011-08-03 07:37:36 UTC
Review of attachment 116956 [details] [review]:

Thanks, pushed to master as 8e27627d.