Update overview when deleting a character with the 'DEL' key

Thanks to xenoborg@googlemail.com for the patch.

https://bugzilla.gnome.org/show_bug.cgi?id=548438